2013-05-16 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/stat_win.php: disabled show events when the
	pandora node is set replication events.
	
	Fixes: #2216
	
	* operation/events/events.php: improve the source code style.

2013-05-16 Miguel de Dios <miguel.dedios@artica.es>

	* ajax.php: fixed PHP warning when the HTTP_REFERER not set.
	
	* godmode/agentes/module_manager_editor_prediction.php,
	include/functions_ui.php, operation/agentes/ver_agente.php,
	operation/agentes/stat_win.php: improved the source code style.

2013-05-14 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/alerts/alert_commands.php: fixed the ajax of
	"get_alert_command".
	
	Fixes: #2214

2013-05-14  Ramon Novoa  <rnovoa@artica.es>

	* include/config_process.php,
	  include/languages/el.mo,
	  include/languages/gl.mo,
	  include/languages/et.mo,
	  include/languages/cs.po,
	  include/languages/es.po,
	  include/languages/en_GB.mo,
	  include/languages/it.mo,
	  include/languages/sl.mo,
	  include/languages/sk.po,
	  include/languages/uk.po,
	  include/languages/ms.po,
	  include/languages/ro.po,
	  include/languages/nb.po,
	  include/languages/en.po,
	  include/languages/pt_BR.po,
	  include/languages/ko.mo,
	  include/languages/fr.po,
	  include/languages/ca.po,
	  include/languages/en_AU.mo,
	  include/languages/tr.po,
	  include/languages/de.po,
	  include/languages/sv.po,
	  include/languages/he.po,
	  include/languages/bn.mo,
	  include/languages/ar.mo,
	  include/languages/te.po,
	  include/languages/mr.mo,
	  include/languages/hu.po,
	  include/languages/da.mo,
	  include/languages/fa.mo,
	  include/languages/ru.po,
	  include/languages/ast.po,
	  include/languages/ja.mo,
	  include/languages/fi.mo,
	  include/languages/hi.mo,
	  include/languages/el.po,
	  include/languages/gl.po,
	  include/languages/eu.mo,
	  include/languages/et.po,
	  include/languages/en_GB.po,
	  include/languages/vi.mo,
	  include/languages/it.po,
	  include/languages/sl.po,